--- a/src/genocs.cli.csproj
+++ b/src/genocs.cli.csproj
@@ -7,7 +7,7 @@
 		<Nullable>enable</Nullable>
 		<PackAsTool>true</PackAsTool>
 		<ToolCommandName>genocs</ToolCommandName>
-		<PackageVersion>0.0.1</PackageVersion>
+		<PackageVersion>0.0.2</PackageVersion>
 		<PackageOutputPath>./nupkg</PackageOutputPath>
 		<PackageId>Genocs.CLI</PackageId>
 		<Title>Genocs CLI Tool</Title>
@@ -19,7 +19,7 @@
 		<PackageReadmeFile>README.md</PackageReadmeFile>
 		<PackageLicenseFile>LICENSE</PackageLicenseFile>
 		<PackageIcon>icon.png</PackageIcon>
-		<VersionPrefix>0.0.1</VersionPrefix>
+		<VersionPrefix>0.0.2</VersionPrefix>
 	
 </PropertyGroup>
 	
@@ -40,6 +40,10 @@
 	
 	<ItemGroup>
 	  <PackageReference Include="Figgle" Version="0.5.1" />
+	</ItemGroup>
+	
+	<ItemGroup>
+	  <Folder Include="nupkg\" />
 	</ItemGroup>
 
 </Project>
