--- a/.github/workflows/build_and_test.yml
+++ b/.github/workflows/build_and_test.yml
@@ -1,10 +1,7 @@
-name: Build test and pack
+name: Build
 
 on:
   push:
-    branches: ["master"]
-
-  pull_request:
     branches: ["master"]
 
 jobs:
@@ -25,10 +22,4 @@ jobs:
         run: dotnet restore
 
       - name: Build
-        run: dotnet build --no-restore
-
-      - name: Test
-        run: dotnet test --no-build --verbosity normal
-
-      - name: Pack
-        run: dotnet pack --no-build --verbosity normal
+        run: dotnet build ./src/genocs.cli.csproj --no-restore
