--- a/src/genocs.cli.csproj
+++ b/src/genocs.cli.csproj
@@ -12,7 +12,8 @@
 		<PackageId>Genocs.CLI</PackageId>
 		<Title>Genocs CLI Tool</Title>
 		<Authors>Nocco Giovanni Emanuele</Authors>
-		<Description>Genocs CLI tool for creating and using Genocs Templates.</Description>
+		<Copyright>Copyright (c) 2023 Genocs Services</Copyright>
+		<Description>Genocs CLI tool to use Genocs Templates.</Description>
 		<PackageTags>dotnet-new;templates</PackageTags>
 		<RepositoryUrl>https://github.com/Genocs/genocs-library-cli</RepositoryUrl>
 		<PackageProjectUrl>https://blog.genocs.com/</PackageProjectUrl>
