--- a/src/genocs.cli.csproj
+++ b/src/genocs.cli.csproj
@@ -48,6 +48,13 @@
         </Content>
     </ItemGroup>
 
+    <ItemGroup>
+      <PackageReference Update="Roslynator.Analyzers" Version="4.5.0">
+        <PrivateAssets>all</PrivateAssets>
+        <IncludeAssets>runtime; build; native; contentfiles; analyzers</IncludeAssets>
+      </PackageReference>
+    </ItemGroup>
+
 </Project>
 
 
