--- a/src/genocs.cli.csproj
+++ b/src/genocs.cli.csproj
@@ -6,6 +6,8 @@
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
         <PackAsTool>true</PackAsTool>
+        <RootNamespace>Genocs.CLI</RootNamespace>
+        <AssemblyName>Genocs.CLI</AssemblyName>
         <ToolCommandName>genocs</ToolCommandName>
         <PackageVersion>0.0.6</PackageVersion>
         <PackageOutputPath>./nupkg</PackageOutputPath>
@@ -20,8 +22,8 @@
         <PackageReadmeFile>README.md</PackageReadmeFile>
         <PackageLicenseFile>LICENSE</PackageLicenseFile>
         <PackageIcon>icon.png</PackageIcon>
-        <VersionPrefix>0.0.6</VersionPrefix>
-    </PropertyGroup>
+        <VersionPrefix>1.0.0</VersionPrefix>
+    </PropertyGroup> 
 
     <ItemGroup>
         <None Include="..\LICENSE">
@@ -49,7 +51,7 @@
     </ItemGroup>
 
     <ItemGroup>
-      <PackageReference Update="Roslynator.Analyzers" Version="4.5.0">
+      <PackageReference Update="Roslynator.Analyzers" Version="4.6.1">
         <PrivateAssets>all</PrivateAssets>
         <IncludeAssets>runtime; build; native; contentfiles; analyzers</IncludeAssets>
       </PackageReference>
