--- a/src/Properties/launchSettings.json
+++ b/src/Properties/launchSettings.json
@@ -2,7 +2,7 @@
   "profiles": {
     "genocs.cli": {
       "commandName": "Project",
-      "commandLineArgs": "-u"
+      "commandLineArgs": "u"
     }
   }
 }
