--- a/.github/workflows/build_and_test.yml
+++ b/.github/workflows/build_and_test.yml
@@ -25,10 +25,10 @@ jobs:
         run: dotnet restore
 
       - name: Build
-        run: dotnet build --no-restore
+        run: dotnet build -c Debug --no-restore
 
       - name: Test
-        run: dotnet test --no-build --verbosity normal
+        run: dotnet test -c Debug --no-build --verbosity normal
 
       - name: Pack
-        run: dotnet pack --no-build --verbosity normal
+        run: dotnet pack -c Debug --no-build --verbosity normal
