Update Roslynator version, Genocs cli details, and documentation
Updated the Roslynator.Analyzers version in Directory.Build.props. Enhanced the Genocs cli description in README files and updated the supported runtime to .NET8. Added release notes for version 1.0.6 in README_NUGET.md. Updated target frameworks in genocs.cli.csproj to net8.0 and updated the copyright year. Made extensive updates to README.md.bak and README_NUGET.md.bak, including new sections and updates. Updated PR and financial contributor sections in README.md. Added uninstall command in README_NUGET.md.

--- a/src/genocs.cli.csproj
+++ b/src/genocs.cli.csproj
@@ -2,7 +2,7 @@
 
     <PropertyGroup>
         <OutputType>Exe</OutputType>
-        <TargetFrameworks>net6.0;net7.0;net8.0</TargetFrameworks>
+        <TargetFrameworks>net8.0</TargetFrameworks>
         <PackageId>Genocs.CLI</PackageId>
         <RootNamespace>Genocs.CLI</RootNamespace>
         <AssemblyName>Genocs.CLI</AssemblyName>
@@ -13,7 +13,7 @@
         <PackageVersion>1.0.0</PackageVersion>
         <PackageOutputPath>./nupkg</PackageOutputPath>
         <Authors>Nocco Giovanni Emanuele</Authors>
-        <Copyright>Copyright (c) 2023 Genocs Services</Copyright>
+        <Copyright>Copyright (c) 2024 Genocs Services</Copyright>
         <PackageTags>dotnet-tool;templates</PackageTags>
         <RepositoryUrl>https://github.com/Genocs/genocs-library-cli</RepositoryUrl>
         <PackageProjectUrl>https://blog.genocs.com/</PackageProjectUrl>
