--- a/src/genocs.cli.csproj
+++ b/src/genocs.cli.csproj
@@ -2,18 +2,18 @@
 
     <PropertyGroup>
         <OutputType>Exe</OutputType>
-        <TargetFrameworks>net9.0</TargetFrameworks>
+        <TargetFrameworks>net10.0</TargetFrameworks>
         <PackageId>Genocs.CLI</PackageId>
         <RootNamespace>Genocs.CLI</RootNamespace>
         <AssemblyName>Genocs.CLI</AssemblyName>
         <Title>Genocs CLI Tool.</Title>
-        <Description>The Genocs CLI Tool to run .NET9 templates.</Description>
+        <Description>The CLI Tool to run Genocs templates.</Description>
         <PackAsTool>true</PackAsTool>
         <ToolCommandName>genocs</ToolCommandName>
-        <PackageVersion>1.2.0</PackageVersion>
+        <PackageVersion>1.3.0</PackageVersion>
         <PackageOutputPath>./nupkg</PackageOutputPath>
         <Authors>Nocco Giovanni Emanuele</Authors>
-        <Copyright>Copyright (c) 2025 Genocs Services</Copyright>
+        <Copyright>Copyright (c) Genocs Services</Copyright>
         <PackageTags>dotnet-tool;templates</PackageTags>
         <RepositoryUrl>https://github.com/Genocs/genocs-library-cli</RepositoryUrl>
         <PackageProjectUrl>https://blog.genocs.com/</PackageProjectUrl>
